--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,8 +2,11 @@
 
 <ul>
 <% @users.each do |user| %>
-  <li>User email: <%= user.email %></li>
+  <li>
+    User email: <%= user.email %>
+    <%= link_to 'Show', user %>
+    <%= link_to 'Edit', edit_user_path(user) %>
+  </li>  
 <% end %>
 </ul>
-
 <%= link_to 'Go to articles', articles_path %>
