--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,11 @@
-<p id="notice"><%= notice %></p>
+<%= render @article %> <!-- details coming from _article.html.erb partial -->
 
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
+<h3>Comments</h3>
+<div id="comments">
+	<div style='border: 1px solid purple;'>
+		<%= render @article.comments %>
+		<!-- for each comment associated with article, there will be comments/_comment.html.erb partial generated-->
+	</div>
+</div>
 
-<p>
-  <strong>Body:</strong>
-  <%= @article.body %>
-</p>
-
-<p>
-  <strong>Published at:</strong>
-  <%= @article.published_at %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<%= render :file => 'comments/new' %>
