--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,6 +2,11 @@
 
 <h1>Listing Articles</h1>
 
+<div id="articles">
+  <%= render @articles %>
+</div>
+
+<!-- 
 <table>
   <thead>
     <tr>
@@ -24,7 +29,7 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
 
 <br>
 
