--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,29 @@
 </head>
 <body>
 
-<%= content_tag :p, notice, :class => 'notice' if notice.present? %>
-<%= content_tag :p, alert, :class => 'alert' if alert.present? %>
+  <div id="header">
+  	<h1><%= link_to 'Blog', root_path %></h1>
+  	<div id="user_bar">
+  		<% if logged_in? %>
+				<%= link_to 'New Article', new_article_path %> |
+				<%= link_to 'Edit Password', edit_user_path(current_user) %> |
+				<%= link_to 'Logout', logout_path %>
+  		<% else %>
+        <%= link_to 'Login', login_path %>
+  		<% end %>
+  	</div>
+  </div><!-- #header ENDS-->
+  
+  <div id="main">
+		<%= content_tag :p, notice, :class => 'notice' if notice.present? %>
+		<%= content_tag :p, alert, :class => 'alert' if alert.present? %>
 
-<%= yield %>
+		<%= yield %>  	
+  </div><!-- #main ENDS -->
+
+	<div id="footer">
+		A simple blog built by xav.
+	</div><!-- #footer ENDS -->
 
 </body>
 </html>
