--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Blog</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
@@ -29,7 +29,7 @@
   </div><!-- #main ENDS -->
 
 	<div id="footer">
-		A simple blog built by xav.
+		A simple blog built with Ruby on Rails.
 	</div><!-- #footer ENDS -->
 
 </body>
