--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,4 +8,5 @@
 	</div>
 </div>
 
-<%= render :file => 'comments/new' %>
+<%= link_to 'new comment', new_article_comment_path(@article, :format => :js), :remote => true, :id => 'new_comment_link' %>
+
