--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,7 +2,7 @@
 
 <h3>Comments</h3>
 <div id="comments">
-	<div style='border: 1px solid purple;'>
+	<div>
 		<%= render @article.comments %>
 		<!-- for each comment associated with article, there will be comments/_comment.html.erb partial generated-->
 	</div>
