--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,9 +3,9 @@
   	<%= comment.name %> &lt;<%= comment.email %>&gt; said: 
   	<% if @article.owned_by? current_user %>
   	  <span class="actions">
-  		  <%= link_to 'Delete', article_comment_path(:article_id => @article, :id => comment), confirm: 'Are you sure?', method: :delete %>
+  		  <%= link_to 'Delete', article_comment_path(:article_id => @article, :id => comment), confirm: 'Are you sure?', method: :delete, remote: true %>
   		  <!-- same as the line below-->
-  	    <%= link_to 'Delete2', [@article, comment], :confirm => 'Are you sure?', :method => :delete %>
+  	    <%= link_to 'Delete2', [@article, comment], :confirm => 'Are you sure?', :method => :delete, remote: true %>
   	  </span>
   	<% end %>
   </h3>
