--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,8 @@
 <%= render @article %> <!-- details coming from _article.html.erb partial -->
 
+<%= link_to 'Email a friend', '#', :onclick => "$('#notify_friend_form').slideDown()" %>
+<%= render 'notify_friend' %>
+
 <h3>Comments</h3>
 <div id="comments">
 	<div>
