--- a/app/views/notifier/email_friend.html.erb
+++ b/app/views/notifier/email_friend.html.erb
@@ -1,2 +1,12 @@
-Your html friend <%= @sender_name %> thinks you may like the following article:
-<%= @article.title %>: <%= article_url(@article, :host => "localhost:3000") %>
+<html>
+<body>
+<p>
+One of your friends, <%= @sender_name %>,
+thinks you like an article we have written.
+</p>
+<p>
+Come check all the information about <strong><%= @article.title %></strong> at
+<%= article_url @article, :host => 'localhost:3000' %>
+</p>
+</body>
+</html>
