--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,12 @@
 
   <div id="header">
   	<h1><%= link_to 'Blog', root_path %></h1>
+    <%= language_selector %><!-- defined in application_helper.rb -->
   	<div id="user_bar">
   		<% if logged_in? %>
-				<%= link_to 'New Article', new_article_path %> |
-				<%= link_to 'Edit Password', edit_user_path(current_user) %> |
-				<%= link_to 'Logout', logout_path %>
+				<%= link_to t('articles.new_article'), new_article_path %> |
+				<%= link_to t('users.edit_password'), edit_user_path(current_user) %> |
+				<%= link_to t('sessions.logout'), logout_path %>
   		<% else %>
         <%= link_to 'Login', login_path %>
   		<% end %>
@@ -29,7 +30,7 @@
   </div><!-- #main ENDS -->
 
 	<div id="footer">
-		A simple blog built with Ruby on Rails.
+		<%= t('general.footer') %>
 	</div><!-- #footer ENDS -->
 
 </body>
